[package]
name = "socket-network-server"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.22"
dashmap = "6.1"
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.26"
rsa = "0.9"
rand = "0.8"
